port: Java sources to NeoForge 1.21.1 API